--- a/style.css
+++ b/style.css
@@ -61,3 +61,9 @@ button:active {
 .operator-btn:active {
     background-color: hsl(35, 100%, 75%);
 }
+
+audio {
+    margin: 0;
+    height: 0;
+    weight: 0;
+}
